Added statement code to UI and updated UI to full width

--- a/server/src/main/resources/org/apache/livy/server/ui/static/css/livy-ui.css
+++ b/server/src/main/resources/org/apache/livy/server/ui/static/css/livy-ui.css
@@ -16,10 +16,19 @@
  */
 
 body {
-  padding-top: 20px;
+  padding-top: 15px;
 }
 
-td pre, td .progress {
+pre {
+  font-size: 12px;
+  line-height: 18px;
+  padding: 6px;
+  margin: 0;
+  word-break: break-word;
+  white-space: pre-wrap;
+}
+
+td .progress {
   margin: 0;
 }
 
