[LIVY-387] [Web UI] Update Log page to split apart different logs
Added js parsing that finds the stdout, stderr, and YARN Diagnostics sections of the log and
displays them in seperate scrollable pre tags.

--- a/server/src/main/resources/org/apache/livy/server/ui/static/css/livy-ui.css
+++ b/server/src/main/resources/org/apache/livy/server/ui/static/css/livy-ui.css
@@ -28,6 +28,11 @@ pre {
   white-space: pre-wrap;
 }
 
+#session-log pre {
+  max-height: 80%;
+  overflow: scroll;
+}
+
 td .progress {
   margin: 0;
 }
