revert docs changes
Change-Id: I0871cdd6da0244f6b2f49b445b6719ca7cc88fab

--- a/docs/_includes/themes/apache/_navigation.html
+++ b/docs/_includes/themes/apache/_navigation.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ HOME_PATH }}">
-              <img src="/assets/themes/apache/img/logo.png" style="display: inline;" width="50">
+              <img src="/assets/themes/apache/img/logo.png" width="50">
               {{ site.data.project.name }}
             <span class="version">{{ site.data.project.version }}</span>
           </a>
