--- a/docs/_includes/themes/apache/default.html
+++ b/docs/_includes/themes/apache/default.html
@@ -15,7 +15,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css">
     <link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet"  type="text/css" media="screen" />
     <!-- Le fav and touch icons -->
@@ -41,7 +41,7 @@
       </footer>
     </div>
 
-    <script src="{{ ASSET_PATH }}/jquery/jquery-3.4.1.min.js"></script>
+    <script src="{{ ASSET_PATH }}/jquery/jquery-2.1.1.min.js"></script>
 
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
 
